# Fedow

./: .dockerignore  .gitignore  CHANGELOG.md  README.md  README_FR.md  TESTS.md  bashrc  docker-compose-prod.yml  docker-compose.yml  docker_nightly_push_update.sh  docker_push_update.sh  dockerfile  env_example  ex_README.md  example_csv_cards_list.csv  fedow_api_documentation.md  flush.sh  flush_and_start.sh  launcher.sh  launcher_dev.sh  launcher_test.sh  manage.py  pyproject.toml  restart.sh  start.sh  start_dev.sh  stripe-completion.bash  technical_stack.md
TECH_DEV/DRIFT/: README.md
backup/: save.sh
database/: courbe_survie.json
fedow_core/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  utils.py  validators.py  views.py
fedow_core/migrations/: 0001_initial.py  0002_alter_asset_category.py  0002_alter_card_uuid.py  0002_alter_checkoutstripe_status.py  0002_alter_fedowuser_key.py  0002_alter_fedowuser_wallet.py  0002_alter_token_unique_together_transaction.py  0002_alter_token_value.py  0002_asset_created_at_asset_last_update.py  0002_createplaceapikey_alter_asset_category.py  0002_place_stripe_connect_valid.py  0003_alter_asset_federated_primary_and_more.py  0003_alter_transaction_action.py  0003_configuration_create_place_apikey.py  0003_rename_nfccard_card_alter_wallet_name.py  0004_alter_wallet_private_pem_alter_wallet_public_pem.py  0005_alter_configuration_create_place_apikey.py  0006_place_lespass_url.py  0007_alter_checkoutstripe_checkout_session_id_stripe_and_more.py  0008_remove_place_lespass_url_place_lespass_domain.py  0009_alter_asset_category_alter_checkoutstripe_status.py  0010_configuration_stripe_api_key.py  0011_alter_organizationapikey_unique_together.py  0012_asset_archive.py  0013_alter_asset_wallet_origin.py  0014_alter_transaction_action.py  0015_alter_checkoutstripe_status.py  0016_alter_asset_name.py  0017_alter_transaction_action.py  0018_alter_checkoutstripe_status.py  0019_checkoutstripe_intent_payment_id_stripe.py  0020_alter_checkoutstripe_user_and_more.py  0021_checkoutstripe_invoice_stripe_id.py  0022_alter_transaction_action.py  0023_alter_organizationapikey_place_and_more.py  0024_alter_transaction_action.py  0025_alter_checkoutstripe_checkout_session_id_stripe.py
fedow_core/tests/: test_api_asset_total_by_place.py  test_api_coverage.py  test_api_documentation.py  test_api_security.py  test_asset_api_coverage.py  test_asset_total_by_place.py  (+7 more)
fedow_dashboard/: apps.py  urls.py  views.py
fedow_user/: apps.py  models.py
fedowallet_django/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: django.conf
www/: gunicorn.logs
(+42 files in other folders)
